fixed horizontal scroll problem

--- a/src/App.css
+++ b/src/App.css
@@ -208,27 +208,6 @@ header {
   margin-top: 72px;
 }
 
-.showroom-controls {
-  z-index: 1;
-  position: absolute;
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  padding: 2rem;
-}
-
-.showroom-img {
-  z-index: 0;
-}
-
-.showroom-arrow {
-  all: unset;
-  cursor: pointer;
-  user-select: none;
-}
-
 .title-container-left {
   display: flex;
   flex-direction: column;
@@ -531,6 +510,7 @@ header {
   position: absolute;
   top: 0;
   padding-top: 770px;
+  max-width: 100%;
 }
 
 .gradient-two {
@@ -547,6 +527,7 @@ header {
   position: absolute;
   top: 0;
   padding-top: 2929px;
+  max-width: 100%;
 }
 
 .gradient-four {
@@ -571,6 +552,7 @@ header {
   top: 0;
   right: 68px;
   padding-top: 1248px;
+  max-width: 100%;
 }
 
 .graphic-two {
@@ -579,6 +561,7 @@ header {
   top: 0;
   left: 68px;
   padding-top: 2948px;
+  max-width: 100%;
 }
 
 .typeform-container {
@@ -633,10 +616,15 @@ footer {
   transform: scale(1.2);
 }
 
-@media (max-width: 768px) {
+@media (min-width: 360px) and (max-width: 768px) {
   body {
     overflow-x: hidden;
   }
+
+  .showroom-container {
+    padding: 0; /* Reduce horizontal padding */
+  }
+
   .nav-desktop {
     display: none;
   }
@@ -661,7 +649,7 @@ footer {
   }
 
   .nav-header-mobile {
-    width: 100%;
+    min-width: 100%;
     display: flex;
     justify-content: space-between;
   }
@@ -716,7 +704,7 @@ footer {
     flex-direction: column;
     justify-content: center;
     align-items: center; /* Center horizontally */
-    padding: 2rem;
+    padding: 2rem 20px;
     float: none;
     margin: 0;
   }
@@ -728,7 +716,7 @@ footer {
   }
 
   .title-line {
-    width: 90%;
+    max-width: 90%;
   }
 
   .title-dots {
@@ -737,27 +725,30 @@ footer {
     margin-left: 20px;
   }
 
-  .service-container {
-    max-width: 20rem;
-  }
-
+  .service-container,
   .studio-client-card {
-    max-width: 10rem;
-    max-height: 10rem;
+    max-width: 90vw;
   }
 
   .studio-client-logo {
-    max-width: 80px;
+    max-width: 100%;
+    height: auto;
   }
 
   .team-card-group-container {
     display: flex;
     flex-wrap: wrap;
-    max-width: 100%;
+    justify-content: center;
+    align-items: center;
   }
 
   .team-group-title {
-    max-width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 24px;
+    margin-bottom: 36px;
+    margin-top: 36px;
   }
 
   .team-group-title h1 {
@@ -795,18 +786,22 @@ footer {
 
   .gradient-two {
     padding-top: 2601px;
+    max-width: 100%;
   }
 
   .gradient-three {
     padding-top: 3929px;
+    max-width: 100%;
   }
 
   .gradient-four {
     padding-top: 5500px;
+    max-width: 100%;
   }
 
   .gradient-five {
     padding-top: 6400px;
+    max-width: 100%;
   }
 
   .gradient-six {
@@ -816,6 +811,7 @@ footer {
     padding-top: 8053px;
     transform: scaleX(-1);
     right: 0;
+    max-width: 100%;
   }
 
   .gradient-seven {
@@ -823,6 +819,7 @@ footer {
     position: absolute;
     top: 0;
     padding-top: 9000px;
+    max-width: 100%;
   }
 
   .graphic-two,
@@ -832,6 +829,10 @@ footer {
 }
 
 @media (min-width: 768px) and (max-width: 1700px) {
+  body {
+    overflow-x: hidden;
+  }
+
   .header-title {
     font-size: 12rem;
     padding: 0 2rem;
